--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <button id="tictactoe">Tic-Tac-toe</button>
-        <script src="index.js"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
