--- a/tictactoe.html
+++ b/tictactoe.html
@@ -26,6 +26,6 @@
                 <div id='22' class="tile"></div>
             </div>
         </div>
-        <script src="tictactoe.js"></script>
+        <script src="js/tictactoe.js"></script>
     </body>
 </html>
