--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>HOME</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="stylesheet/index.css">
     </head>
     <body>
         <button id="tictactoe">Tic-Tac-toe</button>
