--- a/tictactoe.html
+++ b/tictactoe.html
@@ -3,7 +3,7 @@
     <head>
         <title>Tic-Tac-Toe</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="tictactoe.css">
+        <link rel="stylesheet" href="stylesheet/tictactoe.css">
     </head>
     <body>
         <div id="header">
