configured tictactoe feature

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -4,6 +4,7 @@
         <title>Tic-Tac-Toe</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="stylesheet/tictactoe.css">
+        <link rel="icon" type="image/png" href="images/favicon/tictactoe.png"/>
     </head>
     <body>
         <div id="header">
