modified index file. for testing

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HOME</title>
+        <title>Website ni Dhudot</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="stylesheet/index.css">
     </head>
     <body>
-        <button id="tictactoe">Tic-Tac-toe</button>
+        <div class="typewriter">    
+            <h1>Hoy! Putaena ka sino ka ha. Bakit ka nandito sa website ko? Kilala ba kitang hinayupak ka?</h1>
+        </div>
+        <div id="button_container" class="hide">
+            <button id="yes">Oo</button>
+            <button id="no">Hindi</button>
+        </div>
+        <div id="video_container">
+        </div>
         <script src="js/index.js"></script>
     </body>
 </html>
